<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height2"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_dialog_top"
        android:gravity="center"
        android:text="@string/request_permission"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_content"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="true"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/tv_sub_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="@dimen/big_margin2"
        android:layout_marginStart="@dimen/big_margin2"
        android:layout_marginEnd="@dimen/big_margin2"
        android:text="@string/battery_optimization"
        android:textSize="@dimen/text_content"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="@dimen/small_line_spacing" />

    <TextView
        android:id="@+id/tv_sub_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title1"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/big_margin2"
        android:layout_marginEnd="@dimen/big_margin2"
        android:gravity="start"
        android:text="@string/battery_optimization_description"
        android:textSize="@dimen/text_small"
        android:textColor="@color/colorGrey5"
        android:lineSpacingExtra="@dimen/small_line_spacing"
        />

    <LinearLayout
        android:id="@+id/ll_dialog_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height2"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title2"
        android:layout_marginTop="@dimen/big_margin2"
        android:weightSum="3"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding"
            android:background="@drawable/bg_button_dialog_left"
            android:gravity="center"
            android:text="@string/cancel_dialog"
            android:textAllCaps="true"
            android:textColor="@color/colorTextBold"
            android:textSize="@dimen/text_normal"
            />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding"
            android:gravity="center"
            android:background="@drawable/bg_button_dialog_center"
            android:text="@string/watch_instruction_video"
            android:textAllCaps="true"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/text_normal"
            />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding"
            android:gravity="center"
            android:background="@drawable/bg_button_dialog_right"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/text_normal"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
