<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_instruction"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="@dimen/normal_margin1"
        android:layout_marginEnd="@dimen/normal_margin1"
        android:text="@string/battery_optimization"
        android:textSize="@dimen/text_title"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:lineSpacingExtra="@dimen/small_line_spacing" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_setting"
        app:layout_constraintBottom_toTopOf="@id/tv_instruction"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginStart="@dimen/normal_margin1"
        android:layout_marginEnd="@dimen/normal_margin1"
        android:paddingTop="@dimen/normal_padding2"
        android:paddingBottom="@dimen/normal_padding2"
        android:background="@color/colorPureWhite">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="@dimen/normal_image_size2"
            android:layout_height="@dimen/normal_image_size2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/big_margin2"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_app_icon"
            app:layout_constraintTop_toTopOf="@id/iv_app_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_app_icon"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/text_ads_title"
            android:textColor="@color/colorText" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_app_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/big_margin2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_instruction"
        app:layout_constraintBottom_toTopOf="@id/bt_next"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_goneMarginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin1"
        android:layout_marginEnd="@dimen/normal_margin1"
        android:text="@string/instruction_description"
        android:textSize="@dimen/text_content"
        android:textColor="@color/colorWhite"
        android:lineSpacingExtra="@dimen/line_spacing"/>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:paddingStart="@dimen/big_padding2"
        android:paddingEnd="@dimen/big_padding2"
        android:background="@drawable/bg_button_solid_blue"
        android:text="@string/got_it"
        android:textColor="@color/colorWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>